--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "tymon/jwt-auth": "^0.5.5",
-        "barryvdh/laravel-cors": "0.7.x"
+        "barryvdh/laravel-cors": "0.7.x",
+        "league/fractal": "^0.12.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
