--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
         "laravel/framework": "5.1.*",
         "tymon/jwt-auth": "^0.5.5",
         "barryvdh/laravel-cors": "0.7.x",
-        "league/fractal": "^0.12.0"
-    },
-    "require-dev": {
+        "league/fractal": "^0.12.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~4.0"
+    },
+    "require-dev": {
         "phpspec/phpspec": "~2.1"
     },
     "autoload": {
