--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "league/fractal": "^0.12.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "ramsey/uuid": "^3.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
