--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "ramsey/uuid": "^3.0"
+        "ramsey/uuid": "^3.0",
+        "filp/whoops": "^1.1"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
