--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "ramsey/uuid": "^3.0",
-        "filp/whoops": "^1.1"
+        "filp/whoops": "^1.1",
+        "dcn/rbac": "^1.1"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
