--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "ramsey/uuid": "^3.0",
         "filp/whoops": "^1.1",
-        "dcn/rbac": "^1.1"
+        "dcn/rbac": "^1.1",
+        "zackkitzmiller/tiny": "1.2.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
