--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "phpunit/phpunit": "~4.0",
         "filp/whoops": "^1.1",
         "zackkitzmiller/tiny": "1.2.0",
-        "silber/bouncer": "^0.0.25"
+        "silber/bouncer": "^0.0.25",
+        "barryvdh/laravel-debugbar": "^2.1"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
