delete owners and replace it to companies table, delete employees, admin tables, delete mobile app and replace to companies, change customers relationship from outlet to companies

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "phpunit/phpunit": "~4.0",
         "filp/whoops": "^1.1",
         "zackkitzmiller/tiny": "1.2.0",
-        "silber/bouncer": "^0.0.25",
-		"tymon/jwt-auth": "0.5.*"
+        "silber/bouncer": "^0.0.25"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1"
